# amem_benchmark

./: .gitignore  README.md  STATUS.md  amem_full_pipeline.py  amem_process_index.py  amem_process_retrieve.py  data  full_benchmark_locomo.sh  full_benchmark_longmemeval.sh  main.py  parallel_index.py  pyproject.toml  quick_test.sh  requirements.txt  setup.sh  test_5convs.json
amem/agentic_memory/: llm_controller.py  memory_system.py
test_memory_20251211_093254/conv-26/: memory_system.pkl
test_memory_20251211_095326/: index_metadata_0.json
test_memory_20251211_095326/conv-26/: chroma.sqlite3  memory_metadata.json
test_results_20251211_093254/: generation_eval_20251211_093254.json  pipeline_metadata_20251211_093254.json  retrieval_eval_20251211_093254.json
test_results_20251211_095326/: generation_eval_20251211_095326.json  pipeline_metadata_20251211_095326.json  retrieval_eval_20251211_095326.json
