[project]
name = "amem-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bert-score>=0.3.13",
    "chromadb>=0.4.22",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
    "litellm>=1.16.11",
    "nltk>=3.8.1",
    "numpy>=1.24.3",
    "openai>=1.3.7",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.3.2",
    "sentence-transformers>=2.2.2",
    "tqdm>=4.65.0",
    "transformers>=4.36.2",
]
